--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,6 +25,8 @@ jobs:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
+    - name: Clean with Maven
+      run: mvn clean
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
